# netbox-force

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docker/: extra.py
netbox_force/: __init__.py  apps.py  dashboards.py  forms.py  messages.py  middleware.py  models.py  navigation.py  signals.py  ui_strings.py  urls.py  views.py
netbox_force/api/: urls.py  views.py
netbox_force/migrations/: 0001_initial.py  0002_v43_features.py  0002_v4_features.py  0003_v41_features.py  0003_v44_features.py  0004_v42_modules.py  0004_v45_features.py  0005_widget_images.py  0006_auto_changelog.py  0007_wizards_enabled.py  0008_wizard_config.py  0009_wizard_type_choices.py  0010_remove_wizards.py  0011_patchmanagement.py  0012_patch_and_settings.py  0013_patch_contacts_and_ip_fk.py  0014_patch_settings.py  0015_changelogging_fields.py  0016_patchvm_verbose_name.py  0017_patchvm_permissions.py  0018_patch_group_settings.py  0019_checkmk_fields.py
netbox_force/static/netbox_force/: guide_editor.js  import_template_sort.js  widget_images.js
netbox_force/templates/netbox_force/: _tabs.html  audit_scan.html  dashboard.html  feature_disabled.html  guide.html  guide_edit.html  import_template_admin_list.html  import_template_delete.html  import_template_form.html  import_templates.html  model_policies.html  model_policy_delete.html  model_policy_form.html  patch_contact_sync.html  patch_detail.html  patch_entry_delete.html  patch_entry_form.html  patch_list.html  patch_vm_bulk_edit.html  patch_vm_delete.html  patch_vm_form.html  patch_vm_import.html  policy_delete.html  policy_form.html  policy_list.html  rule_delete.html  rule_form.html  rules.html  settings.html  violations.html  (+17 more)
netbox_force/tests/: test_middleware.py  test_signals.py
wizard_scripts/: PERMISSIONS.md  deploy_wizards.sh  wizard_circuit.py  wizard_config.py  wizard_device.py  wizard_ip.py  wizard_prefix.py  wizard_site.py  wizard_vlan.py
(+2 files in other folders)
